--- a/my-app/src/components/CartInputForm/style.module.scss
+++ b/my-app/src/components/CartInputForm/style.module.scss
@@ -1,8 +1,25 @@
 .cartInputForm {
   padding: 10px;
-  background-color: tomato;
-  .label {
-    color: white;
-    margin-right: 10px;
+  background-color: rgb(163, 207, 248);
+  
+
+  .form {
+    display: flex;
+
+    .label {
+      display: flex;
+      // color: white;
+      margin-right: 10px;
+      column-gap: 10px;
+      flex: 1;
+
+      span {
+        text-align: right;
+      }
+
+      input {
+        flex: 1;
+      }
+    }
   }
 }
